[package]
name = "cleanup-gcs"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.48.0", features = ["full"] }
bytes = "1.11"
futures = "0.3"
anyhow = "1.0"
google-cloud-storage = "1.8.0"
clap = { version = "4.5", features = ["derive"] }
serde = "1"
serde_json = "1"
log = "0.4"
async-stream = "0.3.6"
sync_wrapper = { version = "1.0", features = ["futures"] }
pretty_env_logger = "0.5"
google-cloud-wkt = "1.1.0"
google-cloud-gax = "1.3.0"
indicatif-log-bridge = "0.2"
indicatif = "0.18"
parse-size = "1.1.0"
scopeguard = "1.2"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"
